--- a/_posts/2014-05-21-test.md
+++ b/_posts/2014-05-21-test.md
@@ -1,9 +1,7 @@
 ---
 layout: post
-title: Test post
+title: beautifularea
 date: 2014-05-21 12:39:31
 ---
 
-第一个界面，不说页面！！！
-
-<a href="http://github.com/beautifularea" class="muted">@beautifularea</a>
+第一个[界面]，不说页面！！！
