--- a/_posts/2014-05-29-appid.md
+++ b/_posts/2014-05-29-appid.md
@@ -4,7 +4,7 @@ title: 通过appid获取app的信息
 date: 2014-05-29 18:00:00
 ---
 以高德地图为例：
-{% highlight objective-c %}
+{% highlight Objective-C %}
 	NSString *appid = @"461703208";
 	NSString *requestUrlString = [NSString stringWithFormat: @"https://itunes.apple.com/lookup?id=%@", appid];
     NSLog(@"requestUrlString = %@", requestUrlString);
