--- a/_posts/2014-05-30-jekyll.md
+++ b/_posts/2014-05-30-jekyll.md
@@ -19,9 +19,7 @@ step 2: 建立博客
 step 3: 安装本地jekyll环境
 <ul>
    <li>安装command-line-tool terminal输入
-	   {% highlight c %}
-	sudo xcode-select --install
-	   {% endhighlight %}
+	   {% highlight c %}sudo xcode-select --install{% endhighlight %}
    </li>
    <li>安装jekyll
 	   {% highlight c %}
