--- a/_posts/2014-05-30-jekyll.md
+++ b/_posts/2014-05-30-jekyll.md
@@ -22,17 +22,14 @@ step 3: 安装本地jekyll环境
 	   {% highlight c %}sudo xcode-select --install{% endhighlight %}
    </li>
    <li>安装jekyll
-	   {% highlight c %}
-	   sudo ARCHFLAGS=-Wno-error=unused-command-line-argument-hard-error-in-future gem install jekyll
+	   {% highlight c %}sudo ARCHFLAGS=-Wno-error=unused-command-line-argument-hard-error-in-future gem install jekyll
 	   {% endhighlight %}
    </li>
    <li>本地调试
 	   进入到clone到本地的项目中，输入
-	   {% highlight c %}
-	   jekyll build
+	   {% highlight c %}jekyll build
 	   {% endhighlight %}
-	   {% highlight c %}
-	   jekyll serve
+	   {% highlight c %}jekyll serve
 	   {% endhighlight %}
    </li>
 </ul>
