--- a/_posts/2014-05-30-jekyll.md
+++ b/_posts/2014-05-30-jekyll.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Mac 10.9 jekyll github pages 搭建博客
+title: Mac 10.9 jekyll github pages 多说搭建博客
 date: 2014-05-30 17:00:00
 ---
 
@@ -57,6 +57,14 @@ step 5: 绑定域名
 </ul>
 
 step 6: 以后就可以直接使用新域名访问了。
+
+step 7: 添加多说评论框<br/>
+注册多说，添加通用代码，有4个地方要填写如下：
+<br/>
+data-thread-key填上\{\{ page.id \}\}<br/>
+data-title 填上 \{\{ page.title \}\}<br/>
+data-url 填上 your web site/\{\{ page.url \}\}<br/>
+short_name 注册多说账号的时候让你填的二级短域名<br/>
 
 
 
