--- a/_posts/2014-08-22-GCDinfo.md
+++ b/_posts/2014-08-22-GCDinfo.md
@@ -183,3 +183,33 @@ dispatch_once(&pred, ^{
 {% highlight Objective-C %}
 dispatch_io_create(<#dispatch_io_type_t type#>, <#dispatch_fd_t fd#>, <#dispatch_queue_t queue#>, <#^(int error)cleanup_handler#>)
 {% endhighlight %}
+
+
+ps<br/>
+Dispatch Queues and Automatic Reference Counting
+{% highlight Objective-C %}
+The behavior of dispatch queues in an automatic reference counting environment varies depending on the 【deployment target】 that you choose for a given build target.
+
+After iOS6.0 or OS X 10.8：
+iOS 6 and later—Dispatch objects (including queues) are Objective-C objects, and are retained and released automatically.
+OS X 10.8 and later—Dispatch objects (including queues) are Objective-C objects, and are retained and released automatically.
+
+Earlier's :
+Earlier versions—Dispatch objects are custom objects. You must handle the reference counting manually by calling dispatch_retain and dispatch_release.
+
+If you need to use manual reference counting in an ARC-enabled app with a later deployment target (for maintaining compatibility with existing code),
+ you can disable Objective-C-based dispatch objects by adding -DOS_OBJECT_USE_OBJC=0 to your compiler flags.
+{% endhighlight %}
+
+生死锁的条件有四个<br/>
+{% highlight Objective-C %}
+1.互斥条件：所谓互斥就是进程在某一时间内独占资源。
+2.请求与保持条件：一个进程因请求资源而阻塞时，对已获得的资源保持不放。
+3.不剥夺条件:进程已获得资源，在末使用完之前，不能强行剥夺。
+4.循环等待条件:若干进程之间形成一种头尾相接的循环等待资源关系。
+{% endhighlight %}
+
+参考:<br/>
+<a href="https://developer.apple.com/library/ios/documentation/Performance/Reference/GCD_libdispatch_Ref/Reference/reference.html" rel="external nofollow" target="_blank" class="muted">GCD_libdispatch_Ref</a>
+<br/>
+<a href="https://developer.apple.com/library/mac/documentation/General/Conceptual/ConcurrencyProgrammingGuide/Introduction/Introduction.html" rel="external nofollow" target="_blank" class="muted">Concurrency Programming Guide</a>
