--- a/_posts/2014-09-22-manacher.md
+++ b/_posts/2014-09-22-manacher.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 求最长回文串（Manacher算法）
+title: 最长回文串（Manacher算法）
 date: 2014-09-22 10:00:00
 ---
 <br/>
@@ -134,3 +134,10 @@ int main()
 
 PS：<br/>
 <a href="http://acm.hust.edu.cn/vjudge/problem/viewSource.action?id=140283" rel="external nofollow" target="_blank" class="muted">别人家的代码</a>
+
+
+更新：
+重新捋一遍：<br/>
+<image src="/images/P40924-152013.jpg"><br/>
+<image src="/images/P40924-152035.jpg"><br/>
+<image src="/images/P40924-152044.jpg"><br/>
