--- a/_posts/2014-10-18-Yosemite.md
+++ b/_posts/2014-10-18-Yosemite.md
@@ -7,15 +7,17 @@ date: 2014-10-18 12:30:00
 问题一：<br />
 port 命令失效
 解决：<br />
-下载Macport的源码，重新安装。
+下载Macport的源码，重新安装。<br />
+{% highlight C %}
 ./configure
 make 
 sudo make install
+{% endhighlight %}
 
 问题二：<br />
-jekyll serve 提示 Permission denied - /Library/Ruby/Gems/2.0.0/extensions/universal-darwin-14 。。。
+jekyll serve 提示 Permission denied - /Library/Ruby/Gems/2.0.0/extensions/universal-darwin-14 。。。<br />
 解决: <br />
 使用port 重新安装ruby<br />
-运行 sudo jekyll serve。
+运行 sudo jekyll serve。<br />
 
 
