--- a/_posts/2014-08-15-svndiff.md
+++ b/_posts/2014-08-15-svndiff.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: svn diff
+title: svn command
 date: 2014-08-15 16:00:00
 ---
 
@@ -44,4 +44,9 @@ svn log -lN
 对比任意历史版本A和任意历史版本B的差异:
 {% highlight Objective-C %}
 svn diff -r440:445 
+{% endhighlight %}
+
+解决冲突:
+{% highlight Objective-C %}
+svn resolve --accept working ViewController.m
 {% endhighlight %}
