--- a/_posts/2014-08-22-macro.md
+++ b/_posts/2014-08-22-macro.md
@@ -47,3 +47,11 @@ __IPHONE_3_0<br/>
 #ifndef __IPHONE_3_0
 #endif
 {% endhighlight %}
+
+
+{% highlight Objective-C %}
+// 当前系统支持的最小版本
+__IPHONE_OS_VERSION_MIN_REQUIRED
+// 当前系统支持的最大版本
+__IPHONE_OS_VERSION_MAX_ALLOWED
+{% endhighlight %}
