--- a/_posts/2014-08-22-macro.md
+++ b/_posts/2014-08-22-macro.md
@@ -49,6 +49,7 @@ __IPHONE_3_0<br/>
 {% endhighlight %}
 
 
+__IPHONE_OS_VERSION_MIN_REQUIRED<br/>
 {% highlight Objective-C %}
 // 当前系统支持的最小版本
 __IPHONE_OS_VERSION_MIN_REQUIRED
