--- a/_posts/2014-08-15-svndiff.md
+++ b/_posts/2014-08-15-svndiff.md
@@ -50,3 +50,18 @@ svn diff -r440:445
 {% highlight Objective-C %}
 svn resolve --accept working ViewController.m
 {% endhighlight %}
+
+回滚到版本号25：
+{% highlight Objective-C %}
+svn merge -r 28:25 vc.m
+{% endhighlight %}
+
+对比当前本地的工作拷贝文件(working copy)和任意版本A的差异
+{% highlight Objective-C %}
+svn diff -rA  
+{% endhighlight %}
+
+对比任意历史版本A和任意历史版本B的差异
+{% highlight Objective-C %}
+svn diff -rA:B  
+{% endhighlight %}
